<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="10dp"
    android:layout_marginTop="40dp"
    tools:context="com.yogeshojha.localizeapp.MainActivity">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/enter_details"
                android:textSize="25sp"
                android:gravity="center"
                />
            <EditText
                android:id="@+id/name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:inputType="text"
                android:hint="@string/name_hint"
                android:singleLine="true"
                android:textSize="20sp"
                />
            <EditText
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:inputType="textEmailAddress"
                android:hint="@string/email_hint"
                android:singleLine="true"
                android:textSize="20sp"
                />
            <EditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:inputType="textPassword"
                android:hint="@string/password_hint"
                android:singleLine="true"
                android:textSize="20sp"
                />
            <TextView
                android:layout_margin="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:gravity="center"
                android:textColor="#009688"
                android:text="@string/normal_text"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:gravity="center"
                android:textColor="#F44336"
                android:text="@string/please_fill"
                />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_weight="2"
                >
                <Button
                    android:text="@string/red_button_title"
                    android:layout_width="match_parent"
                    android:layout_height="55dp"
                    android:id="@+id/btn1"
                    android:layout_marginTop="10dp"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="5dp"
                    android:textSize="20dp"
                    android:gravity="center"
                    android:background="#F44336"
                    android:textColor="#fff"
                    android:layout_centerHorizontal="true"
                    android:layout_weight="1"
                    />
                <Button
                    android:text="@string/green_button_title"
                    android:layout_width="match_parent"
                    android:layout_height="55dp"
                    android:id="@+id/btn2"
                    android:layout_marginTop="10dp"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="5dp"
                    android:textSize="20dp"
                    android:gravity="center"
                    android:background="#4CAF50"
                    android:textColor="#fff"
                    android:layout_centerHorizontal="true"
                    android:layout_weight="1"
                    />
            </LinearLayout>
            <Button
                android:text="@string/translate_button_title"
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:id="@+id/translate"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:textSize="20dp"
                android:gravity="center"
                android:background="#FF5722"
                android:textColor="#fff"
                android:layout_centerHorizontal="true"
                android:layout_weight="1"
                />
        </LinearLayout>
    </ScrollView>

</RelativeLayout>